--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "build": "webpack -w",
+    "start": "nodemon index.js",
+    "webapp:dev": "concurrently 'npm:build' 'npm:start' "
   },
   "repository": {
     "type": "git",
@@ -26,8 +28,16 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
+    "autoprefixer": "<10.0.0",
     "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
+    "concurrently": "^5.3.0",
+    "css-loader": "^4.3.0",
+    "cssnano": "^4.1.10",
+    "mini-css-extract-plugin": "^0.11.2",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^4.0.2",
+    "sass-loader": "^10.0.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   }
