--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "autoprefixer": "<10.0.0",
     "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
+    "bootstrap": "^4.5.2",
     "concurrently": "^5.3.0",
     "css-loader": "^4.3.0",
     "cssnano": "^4.1.10",
+    "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "postcss-loader": "^4.0.2",
     "sass-loader": "^10.0.2",
     "webpack": "^4.44.2",
