--- a/package.json
+++ b/package.json
@@ -35,9 +35,13 @@
     "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
     "bootstrap": "^4.5.2",
+    "browser-sync": "^2.26.12",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "concurrently": "^5.3.0",
     "css-loader": "^4.3.0",
     "cssnano": "^4.1.10",
+    "html-webpack-partials-plugin": "^0.7.0",
+    "html-webpack-plugin": "^4.5.0",
     "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
